apps/status-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-dashboard
  namespace: ${status_dashboard_namespace}
spec:
  selector:
    app.kubernetes.io/name: status-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
